# pencil-drawing-filter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: border.hpp  combiner.hpp  vector_field_gen.hpp  white_noise_gen.hpp
include/lic/: lic.hpp
resources/: CMakeLists.txt  readme
src/: CMakeLists.txt  border.cpp  combiner.cpp  main.cpp  vector_field_gen.cpp  white_noise_gen.cpp
src/lic/: CMakeLists.txt  lic.cpp
test/: CMakeLists.txt  test.cpp  test_border.cpp  test_extend_paper.cpp  test_fourier.cpp  test_pd.cpp
