cmake_minimum_required (VERSION 3.0.0)

add_executable (test-seg test.cpp)
add_executable (test-fourier test_fourier.cpp)
add_executable (test-border test_border.cpp)
add_executable (test-pd test_pd.cpp)
target_link_libraries (test-pd pencil-drawing ${OpenCV_LIBS})
target_link_libraries (test-seg ${OpenCV_LIBS})
target_link_libraries (test-fourier pencil-drawing ${OpenCV_LIBS})
target_link_libraries (test-border ${OpenCV_LIBS})